Correct background glow z-index to -1 to prevent overlaying the transformed smooth-content container

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -17,7 +17,7 @@
 .landing-circle1 {
   top: 0%;
   left: 0%;
-  z-index: 2;
+  z-index: -1;
   position: fixed;
   width: 300px;
   height: 300px;
@@ -56,7 +56,7 @@
   top: 50%;
   right: 0%;
   transform: translate(calc(100% - 2px), -50%);
-  z-index: 2;
+  z-index: -1;
   position: fixed;
   display: none;
   width: 300px;
